# CopperFX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  copper.install  copperfx.sublime-workspace  copyrights  test_img.exr
copper_gui/: CMakeLists.txt
copper_gui/src/: copper_gui.cpp
src/copper/: CMakeLists.txt  Engine.cpp  Engine.h
src/copper/DT/: DT_GeometryData.cpp
src/copper/GEO/: GEO_Geometry.cpp  GEO_Geometry.h  Point.cpp  Point3.cpp  Point3.h  Prim.cpp  Prim.h  Vertex.cpp  Vertex.h
src/copper/OP/: OP_NetworkBoxItem.cpp  OP_Node.cpp  OP_Operator.cpp
src/copper/OpData/: BaseOpData.h  GeometryOpData.cpp  GeometryOpData.h  ImageOpData.cpp  ImageOpData.h  OpDataBase.h  OpDataTable.cpp  OpDataTable.h
src/copper/OpParameter/: OpParameter.cpp  OpParameter.h
src/copper/Operator/: BaseOperator.cpp  BaseOperator.h  NetworkBoxItem.cpp  NetworkBoxItem.h  OP_Network.h  OP_NetworkBoxItem.cpp  OP_NetworkBoxItem.h  OP_Node.cpp  OP_Node.h  OP_Parameters.cpp  OP_Parameters.h  OpBase.cpp  OpBase.h  OpCreator.cpp  OpCreator.h  OpDataSocket.cpp  OpDataSocket.h  OpDataSocketTemplate.cpp  OpDataSocketTemplate.h  OpDefinition.cpp  OpDefinition.h  OpFactory.cpp  OpFactory.h  OpNetwork.cpp  OpNetwork.h  OpNode.cpp  OpNode.h  OpNodeTemplate.cpp  OpNodeTemplate.h  OpTable.cpp  OpTable.h  OperatorBase.cpp  OperatorBase.h
src/copper/PL/: PL_ObjectFactory.cpp  PL_PluginApi.cpp
src/copper/Plugin/: AbstractFactory.h  ObjectFactory.cpp  ObjectFactory.h  PluginApi.h  PluginManager.cpp  PluginManager.h  TypeInfo.h
src/copper/Prims/: Camera.cpp  Camera.h  Constants.h  GEO_Geometry.cpp  GEO_Geometry.h  Matrix.h  Point.h  Point3.cpp  Prim.cpp  Prim.h  Vector.h  Vertex.cpp  Vertex.h
src/copper/Sys/: SysCompiler.h  SysTypes.h
src/copper/UT/: Vector2.cpp  Vector3.cpp
src/copper/Util/: IndexableObject.cpp  IndexableObject.h  Singleton.h  UT_StringUtils.cpp  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
src/copper/operators/: CMakeLists.txt
src/copper/operators/BoxGeometryOp/: BoxGeometryOp.cpp  BoxGeometryOp.h  CMakeLists.txt
src/copper_gui/: CMakeLists.txt  GUI_MainWindow.cpp  GUI_PanelManager.cpp  GUI_PanelRegistry.cpp  GUI_SceneViewPanel.cpp  GUI_Workspace.cpp  bin  copper_gui.cpp  resources.qrc
src/copper_gui/cfs/: copper
src/copper_gui/media/icons/: make_icns.sh
src/copper_lib/: CMakeLists.txt  Engine.cpp  Plugin.cpp
src/copper_lib/GEO/: GEO_Geometry.cpp  Geometry.cpp  Point.cpp  Prim.cpp  Vertex.cpp
src/copper_lib/GPU/: GPU_Manager.cpp
src/copper_lib/Geometry/: Geometry.cpp  Point.cpp  Prim.cpp  Vertex.cpp
src/copper_lib/Math/: Vector2.cpp  Vector3.cpp
src/copper_lib/Node/: NetworkBoxItem.cpp  Node.cpp
src/copper_lib/OP/: NetworkBoxItem.cpp  Node.cpp  OP_NetworkBoxItem.cpp  OP_Node.cpp  OP_Operator.cpp  OP_Parameters.cpp
src/copper_lib/PL/: PL_ObjectFactory.cpp  PL_PluginManager.cpp
src/copper_lib/Parameters/: Parameters.cpp
src/copper_lib/UT/: UT_StringUtils.cpp  Vector2.cpp  Vector3.cpp
src/copper_pymodule/: CMakeLists.txt  COM_Geometry.cpp  COM_Module.cpp  COM_Node.cpp  COM_Point.cpp  COM_Prim.cpp  COM_Vector.cpp  HOM_Geometry.cpp  HOM_Module.cpp  HOM_Node.cpp  HOM_Point.cpp  HOM_Prim.cpp  HOM_Vector3.cpp  HOU_Geometry.cpp  HOU_Geometry.h  HOU_Point.cpp  HOU_Point.h  HOU_Vector3.cpp  HOU_Vector3.h  copper_pymodule.cpp  export_Geometry.cpp  export_Node.cpp  export_Point.cpp  export_Vector2.cpp  export_Vector3.cpp  module.cpp  module.h
src/copper_pymodule/COM/: COM_Geometry.cpp  COM_Geometry.h  COM_Node.cpp  COM_Node.h  COM_Point.cpp  COM_Point.h  COM_Prim.cpp  COM_Vector.cpp  COM_Vector.h
src/copper_pymodules/: CMakeLists.txt  hou_module.cpp  hou_module.h
src/copper_pymodules/HOU/: HOU_Geometry.cpp  HOU_Geometry.h  HOU_Node.cpp  HOU_Node.h  HOU_Point.cpp  HOU_Point.h  HOU_Prim.cpp  HOU_Prim.h  HOU_Vector.cpp  HOU_Vector.h  HOU_Vertex.h
src/copperfx/: CMakeLists.txt  FS_DynamicLibrary.cpp  FS_PluginManager.cpp  GUI_LogWindow.cpp  GUI_MainWindow.cpp  GUI_Panel.cpp  GUI_PanelManager.cpp  GUI_PanelRegistry.cpp  GUI_SceneViewPanel.cpp  copperfx.cpp  resources.qrc
src/copperfx/GUI/: GUI_MainWindow.cpp  GUI_MainWindow.h  GUI_Panel.cpp  GUI_Panel.h  GUI_PanelManager.cpp  GUI_PanelManager.h  GUI_PanelRegistry.cpp  GUI_PanelRegistry.h  GUI_SceneViewPanel.cpp  GUI_SceneViewPanel.h  GUI_Workspace.cpp
src/copperfx/Plugin/: PanelApi.h
src/copperfx/Ui/: Application.cpp  Application.h  LogWindow.cpp  LogWindow.h  MainWindow.cpp  MainWindow.h  PanelBase.cpp  PanelBase.h  PanelManager.cpp  PanelManager.h  SceneViewPanel.cpp  SceneViewPanel.h  ScopedPanelBase.cpp  ScopedPanelBase.h  TabBar.cpp  TabBar.h  TabView.cpp  TabView.h  Workspace.cpp  Workspace.h
src/copperfx/contrib/: CMakeLists.txt
src/copperfx/contrib/Ui/NodeFlowViewPanel/: NodeFlowScene.cpp  NodeFlowScene.h  NodeFlowView.cpp  NodeFlowView.h  NodeItem.cpp  (+1 more)
src/copperfx/media/icons/: copperfx_icon.icns
src/copperfx/panels/: CMakeLists.txt
src/copperfx/panels/NodeFlowViewPanel/: CMakeLists.txt  NodeConnectionItem.cpp  NodeConnectionItem.h  NodeFlowDefines.h  NodeFlowScene.cpp  NodeFlowScene.h  NodeFlowView.cpp  NodeFlowView.h  NodeFlowViewPanel.cpp  NodeFlowViewPanel.h  NodeItem.cpp  NodeItem.h  NodeSocketItem.cpp  NodeSocketItem.h
src/copperfx/panels/SceneViewPanel/: CMakeLists.txt  SceneViewPanel.cpp  SceneViewPanel.h  SceneViewPanelGLWidget.cpp  SceneViewPanelGLWidget.h
src/copperfx/resources/: style.qss
src/copperpy/: CMakeLists.txt  copperpy.cpp
src/shout/display_drivers/SDLDisplayDriver/: CMakeLists.txt  SDLDisplayDriver.cpp  SDLOpenGLWindow.cpp  SDLOpenGLWindow.h
src/shout/shout_cmd/: CMakeLists.txt  shout_cmd.cpp
src/shout/shout_lib/: BSON.g4  CMakeLists.txt  IFD.g4  OBJ.g4  display.cpp  display.h  renderer.cpp  renderer.h  renderer_opengl.cpp  renderer_opengl.h  utils.cpp  utils.h
src/shout/shout_lib/SCN/: BinaryAntlrInputStream.cpp  BinaryAntlrInputStream.h  SCN_BaseLexer.h  SCN_BaseParser.h  SCN_BaseToken.h  SCN_IFDTranslator.cpp  SCN_IFDTranslator.h  SCN_IORegistry.cpp  SCN_IORegistry.h  SCN_IOTranslator.cpp  SCN_IOTranslator.h  SCN_Scene.cpp  SCN_Scene.h
(+113 files in other folders)
